contrast fix

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -1,29 +1,29 @@
-$link: #c60c30
-$unit: 14px
+$link:       #c60c30
+$unit:       14px
 $lineheight: 21px
-$ratio: 1.61803398875
+$ratio:      1.61803398875
 
 *
-    margin: 0
+    margin:  0
     padding: 0
-    border: none
+    border:  none
 
 a
-    color: $link
+    color:           $link
     text-decoration: none
 
 sur
-    font-size: 1rem/$ratio
+    font-size:   1rem/$ratio
     font-weight: bold
-    position: relative
-    top: -0.5rem
+    position:    relative
+    top:        -.5rem
     margin-left: .1rem
 
 img
     max-width: 100%
 
 figure
-    position: relative
+    position:   relative
     text-align: center
     img
         margin-bottom: 0
@@ -43,16 +43,16 @@ h2,h3,h4,h5,
 pre,code,
 .aboutme
     font-family: "Roboto Mono", sans-serif
-    font-size: $unit
+    font-size:   $unit
     line-height: 1em*$ratio
 
 .page
-    padding: 2.7rem 3rem
-    display: block
+    padding:   2.7rem 3rem
+    display:   block
     max-width: 44rem
-    position: relative
-    z-index: 1
-    margin: 0 auto
+    position:  relative
+    z-index:   1
+    margin:    0 auto
 
 .header
     display: block
@@ -71,25 +71,25 @@ pre,code,
 .postlink__time,
 .postlink__title
     font-weight: normal
-    display: inline
+    display:     inline
 
 .sociallinks,
 .postlink__time,
 .category__header
-    color: #aaa
+    color:       #767676
     font-weight: normal
 
 .postlink__title__arrow
     opacity: 0
 
 .post__title
-    font-size: 1rem * $ratio
+    font-size:     1rem * $ratio
     margin-bottom: 2.4rem
-    font-weight: bold
+    font-weight:   bold
 
 .post__intro
-    font-style: italic
-    font-size: 1rem / $ratio
+    font-style:  italic
+    font-size:   1rem / $ratio
     line-height: 1em * $ratio
 
 .post__time
@@ -98,10 +98,10 @@ pre,code,
 .post__content
     img,
     video
-        display: block
-        margin-left: auto
+        display:      block
+        margin-left:  auto
         margin-right: auto
-        text-align: center
+        text-align:   center
 
 .side
     width: calc((100vw - 44rem - 2*3rem)/2)
